--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <a href="main-info.html"><h2>3. Основная информация</h1></a>
     <a href="card.html"><h2>4. Карточка земельных участков</h1></a>
     <a href="process-card.html"><h2>5. Карточка процесса</h1></a>
-    <a href="Process.html"><h2>6. Процесс</h1></a>
+    <a href="pgitrocess.html"><h2>6. Процесс</h1></a>
     <a href="registry.html"><h2>7. Реестр земельных участков</h1></a>
     <a href="services-1.html"><h2>8. Список услуг</h1></a>
     <a href="services-2.html"><h2>9. Реестр услуг</h1></a>
