--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -52,17 +46,17 @@
     <div class="sg-container">
       
 <div class="list">
-    <a href="main.html"><h2>1. Главная</h1></a>
-    <a href="in-work.html"><h2>2. В работе</h1></a>
-    <a href="main-info.html"><h2>3. Основная информация</h1></a>
-    <a href="card.html"><h2>4. Карточка земельных участков</h1></a>
-    <a href="process-card.html"><h2>5. Карточка процесса</h1></a>
-    <a href="process.html"><h2>6. Процесс</h1></a>
-    <a href="registry.html"><h2>7. Реестр земельных участков</h1></a>
-    <a href="services-1.html"><h2>8. Список услуг</h1></a>
-    <a href="services-2.html"><h2>9. Реестр услуг</h1></a>
-    <a href="services-card-1.html"><h2>10. Описание услуги</h1></a>
-    <a href="services-card-2.html"><h2>11. Карточка услуги</h1></a>        
+    <a class="sg-btn index-link" href="main.html">Главная</a>
+    <a class="sg-btn index-link" href="in-work.html">В работе</a>
+    <a class="sg-btn index-link" href="main-info.html">Основная информация</a>
+    <a class="sg-btn index-link" href="card.html">Карточка земельных участков</a>
+    <a class="sg-btn index-link" href="process-card.html">Карточка процесса</a>
+    <a class="sg-btn index-link" href="process.html">Процесс</a>
+    <a class="sg-btn index-link" href="registry.html">Реестр земельных участков</a>
+    <a class="sg-btn index-link" href="services-1.html">Список услуг</a>
+    <a class="sg-btn index-link" href="services-2.html">Реестр услуг</a>
+    <a class="sg-btn index-link" href="services-card-1.html">Описание услуги</a>
+    <a class="sg-btn index-link" href="services-card-2.html">Карточка услуги</a>      
 </div>
 
     </div>
